# dos-date-time

./: .bumpversion.toml  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  README.md  justfile  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  REUSE.yaml  SemverChecks.yaml  tombi.yaml
benches/: cmp.rs  convert.rs  date_time.rs
benches/dos_date/: cmp.rs  convert.rs  main.rs
benches/dos_date_time/: cmp.rs  convert.rs  main.rs
benches/dos_time/: cmp.rs  convert.rs  main.rs
examples/: README.adoc  format.rs  parse.rs
src/: date_time.rs  dos_date.rs  dos_date_time.rs  dos_time.rs  error.rs  lib.rs
src/date_time/: cmp.rs  consts.rs  convert.rs  fmt.rs
src/dos_date/: cmp.rs  consts.rs  convert.rs  fmt.rs
src/dos_date_time/: consts.rs  convert.rs  fmt.rs
src/dos_time/: cmp.rs  consts.rs  convert.rs  fmt.rs
src/error/: date_time.rs  dos_date.rs  dos_date_time.rs
