# SPDX-FileCopyrightText: 2025 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "dos-date-time"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"
description = "An MS-DOS date and time library"
documentation = "https://docs.rs/dos-date-time"
repository = "https://github.com/sorairolake/dos-date-time"
license = "Apache-2.0 OR MIT"
keywords = ["date", "dos", "time"]
categories = ["date-and-time", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4.43", default-features = false, optional = true }
jiff = { version = "0.2.18", default-features = false, optional = true }
time = { version = "0.3.46", default-features = false }

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
time = { version = "0.3.46", features = ["formatting", "macros", "parsing"] }

[features]
default = ["std"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]
std = ["chrono?/std", "jiff?/std", "time/std"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
